# p2panda-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  uniffi-bindgen.rs
examples/go/simple-chat/: README.md  go.mod  main.go
go/p2panda_ffi/: cgo_flags.go  go.mod  p2panda_ffi.go  p2panda_ffi.h  p2panda_ffi_test.go
go/p2panda_ffi/nodebuilder/: nodebuilder.go
go/p2panda_ffi/topic/: topic.go
nodejs/: .gitignore  eslint.config.js  example.js  package-lock.json  package.json  tsconfig.json
nodejs/p2panda_ffi/: index.d.ts  index.js  p2panda_ffi-ffi.d.ts  p2panda_ffi-ffi.js  p2panda_ffi.d.ts  p2panda_ffi.js  package-lock.json  package.json
nodejs/p2panda_ffi/runtime/: async-rust-call.d.ts  async-rust-call.js  callbacks.d.ts  callbacks.js  errors.d.ts  errors.js  ffi-converters.d.ts  ffi-converters.js  ffi-types.d.ts  ffi-types.js  handle-map.d.ts  handle-map.js  objects.d.ts  objects.js  rust-call.d.ts  rust-call.js
nodejs/src/: index.ts
python/: .gitignore  example.py
python/p2panda_ffi/: p2panda_ffi.py
scripts/: generate-go-uniffi.sh  test-go-uniffi.sh
src/: builder.rs  core.rs  ephemeral_stream.rs  lib.rs  node.rs  topic_stream.rs
