[package]
name = "p2panda-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "p2panda"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
p2panda = { git = "https://github.com/p2panda/p2panda", rev = "533a77df6a964746db3477901faebb4fc4c54275" }
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "533a77df6a964746db3477901faebb4fc4c54275" }
thiserror = "2.0.18"
tokio = "1.52.1"
uniffi = { version = "0.31.1", features = ["cli", "tokio"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }
